# autoSubtitle

./: .gitignore  Agent.md  audioCapture.py  audio_processor.py  backend.py  callModel.py  config.toml  debug.py  main.py  modelServer.py  model_server.py  pyproject.toml
gui/: home_interface.py  main_window.py  setting_interface.py  subtitle_view.py
